--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <p>Neki nasumični brojevi: <span id="randomNumber">12345</span></p>
 
-        <p>Kraj stranice. Pratite me za više ažuriranja!</p>
+        <p>Kraj stranice. Pratite me za više mama!</p>
     </div>
 </body>
 </html>
